Changed  "settings" <a> element to the <button> in the utility header ssi (in response to "Use Native Semantics #20" pull request)

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - Feb-13-2018 */
+/* cagov-template-v5 - v0.0.1 - Feb-15-2018 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -7461,6 +7461,15 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 .utility-header ul li {
   padding: 0 8px;
+}
+.utility-header ul li button {
+  font-size: 100%;
+  outline: none !important;
+  position: relative;
+  top: -1px;
+}
+.utility-header ul li button span {
+  font-size: 100% !important;
 }
 .utility-header .settings-links {
   font-size: 87%;
