--- a/source/less/cagov/utility-header.less
+++ b/source/less/cagov/utility-header.less
@@ -52,6 +52,15 @@
         margin-bottom:0;
         li {
           padding: 0 8px;
+		  button {
+				font-size: 100%;
+				outline:none !important;
+				position:relative;
+				top:-1px;
+				span {
+					font-size: 100% !important;
+					}
+			  }
         }
     }
 
