--- a/source/scss/cagov/utility-header.scss
+++ b/source/scss/cagov/utility-header.scss
@@ -123,7 +123,82 @@
     }
 }
 
+//
+// FLEX UTILITY
+// --------------------------------------------------
 
+.utility-header {
+    .flex-row {
+        display: flex;
+
+        .social-media-links {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+
+            .header-cagov-logo {
+                margin-right: 40px;
+
+                @media (min-width: $screen-xs-max) and (max-width: $screen-sm-max) {
+                    margin-right: 20px;
+                }
+
+                @media (max-width: $screen-xs-max) {
+                    margin-right: 15px;
+                }
+
+                a {
+                    margin: 0;
+                    padding-top: 0;
+                }
+            }
+
+            a {
+                margin: 0px 10px 0 10px;
+
+
+                @media (max-width: $screen-xs-max) {
+                    margin: 0px 4px 0 4px;
+                }
+            }
+
+            > a {
+                padding-top: 7px; // links with icons
+            }
+
+            @media (max-width: $screen-xs-max) {
+                [class^="ca-gov-icon-"] {
+                    font-size: 1rem;
+                }
+            }
+        }
+
+        .settings-links {
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: auto; // justify to the right
+            align-items: baseline; // make items vertically centered
+            justify-content: flex-end;
+            padding-top: 3px;
+
+            a {
+                margin: 0 10px 0 10px;
+
+
+
+
+                @media (max-width: $screen-xs-max) {
+                    margin: 5px 4px 0 4px;
+                    padding: 0;
+                }
+            }
+
+            button {
+                margin: -5px 4px 0 4px;
+            }
+        }
+    }
+}
 //
 // HIDE UTILITY HEADER IN HEADER COMPACT MODE
 // --------------------------------------------------
