--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.6 -  @version v5.6.1 -  2/4/2022 
+ * CA State Template v5.6 -  @version v5.6.2 -  3/18/2022 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
@@ -12954,6 +12954,7 @@ h1, .h1,
   margin-top: 3rem;
   margin-bottom: 1.6rem;
   font-family: "Asap Condensed", sans-serif;
+  line-height: 1.25;
 }
 
 @media (min-width: 576px) {
@@ -12971,6 +12972,7 @@ h2, .h2,
   margin-top: 2.7rem;
   margin-bottom: 1.4rem;
   font-family: "Asap Condensed", sans-serif;
+  line-height: 1.375;
 }
 
 @media (min-width: 576px) {
@@ -12988,6 +12990,7 @@ h3, .h3,
   margin-top: 2.4rem;
   margin-bottom: 1.2rem;
   font-family: "Asap Condensed", sans-serif;
+  line-height: 1.5;
 }
 
 @media (min-width: 576px) {
@@ -13005,6 +13008,7 @@ h4, .h4,
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-family: "Asap Condensed", sans-serif;
+  line-height: 1.625;
 }
 
 @media (min-width: 576px) {
@@ -13022,6 +13026,7 @@ h5, .h5,
   margin-top: 1.7rem;
   margin-bottom: 0.8rem;
   font-family: "Asap Condensed", sans-serif;
+  line-height: 1.75;
 }
 
 @media (min-width: 576px) {
@@ -13039,6 +13044,7 @@ h6, .h6,
   margin-top: 1.4rem;
   margin-bottom: 0.6rem;
   font-family: "Asap Condensed", sans-serif;
+  line-height: 1.75;
 }
 
 @media (min-width: 576px) {
