--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -233,6 +233,7 @@ h1,
         margin-bottom: calc(1.6rem + #{$ratio-headers});
     }
     font-family: $headings-font-family;
+    line-height: 1.25;
 }
 
 h2,
@@ -248,6 +249,7 @@ h2,
         margin-bottom: calc(1.4rem + #{$ratio-headers});
     }
     font-family: $headings-font-family;
+    line-height: 1.375;
 }
 
 h3,
@@ -262,6 +264,7 @@ h3,
         margin-bottom: calc(1.2rem + #{$ratio-headers});
     }
     font-family: $headings-font-family;
+    line-height: 1.5;
 }
 
 h4,
@@ -277,6 +280,7 @@ h4,
     }
 
     font-family: $headings-font-family;
+    line-height: 1.625;
 }
 
 h5,
@@ -292,6 +296,7 @@ h5,
         margin-bottom: calc(0.8rem + #{$ratio-headers});
     }
     font-family: $headings-font-family;
+    line-height: 1.75;
 }
 
 h6,
@@ -307,6 +312,7 @@ h6,
     }
 
     font-family: $headings-font-family;
+    line-height: 1.75;
 }
 
 h1,
