--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -2,41 +2,51 @@
 	<h2 class="p-t-1 p-b-3">What's new in V6</h2>
 	<div class="row">
 		<div class="third m-b-md bg-white-hover p-4">
-			<div class="pos-rel m-b-0" style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
-				<img class="p-4" src="/images/pattern-icon.svg" alt="Image Description">
-			</div>
 
-			<div class="p-a " style="min-height: 236px; background:#fafafa">
-				<h3 class="h4 m-t-0 m-b-sm">
-					<a class="color-gray-dark color-primary-hover text-decoration-none" href="/patterns.html">New patterns</a>
+			<a class="color-gray-dark text-decoration-none link-before" href="/patterns.html">
+				<div class="pos-rel m-b-0" style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
+					<img class="p-4" src="/images/pattern-icon.svg" alt="Image Description">
+				</div>
+				<div class="p-a " style="min-height: 236px; background:#fafafa">
+					<h3 class="h4 m-t-0 m-b-sm">
+					New patterns
 				</h3>
-				<p>We added new components, combined similar components, and improved the overall design and functionality.</p>
-			</div>
+					<p>We added new components, combined similar components, and improved the overall design and functionality.</p>
+				</div>
+			</a>
+
 		</div>
 
 		<div class="third m-b-md bg-white-hover p-4">
-			<div class="pos-rel m-b-0" style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
-				<img class="p-4" src="/images/nav-icon.svg" alt="Image Description">
-			</div>
+			<a class="color-gray-dark text-decoration-none link-before" href="/structure/site-navigation.html">
+				<div class="pos-rel m-b-0" style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
+					<img class="p-4" src="/images/nav-icon.svg" alt="Image Description">
+				</div>
 
-			<div class="p-a" style="min-height: 236px; background:#fafafa">
-				<h3 class="h4 m-t-0 m-b-sm">
-					<a class="color-gray-dark color-primary-hover text-decoration-none" href="#">Enhanced navigation</a>
+				<div class="p-a" style="min-height: 236px; background:#fafafa">
+
+					<h3 class="h4 m-t-0 m-b-sm">
+					Enhanced navigation
 				</h3>
-				<p>Better wayfinding and new side navigation makes developing user-friendly websites easier than ever.</p>
-			</div>
+					<p>Better wayfinding and new side navigation makes developing user-friendly websites easier than ever.</p>
+				</div>
+			</a>
 		</div>
 
 		<div class="third m-b-md bg-white-hover p-4">
-			<div style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
-				<img class="p-4" src="/images/refreshed-icon.svg" alt="Image Description">
-			</div>
-			<div class="p-a" style="min-height: 236px; background: #FAFAFA;">
-				<h3 class="h4 m-t-0 m-b-sm">
-					<a class="color-gray-dark color-primary-hover text-decoration-none" href="/typography.html">Refreshed visual design</a>
+			<a class="color-gray-dark text-decoration-none link-before" href="/typography.html">
+				<div style="max-height: 155px;overflow: hidden;background: linear-gradient(180deg, #046B99 0%, #4993B5 100%);text-align: center;">
+					<img class="p-4" src="/images/refreshed-icon.svg" alt="Image Description">
+				</div>
+				<div class="p-a" style="min-height: 236px; background: #FAFAFA;">
+
+					<h3 class="h4 m-t-0 m-b-sm">
+					Refreshed visual design
 				</h3>
-				<p>We’ve enhanced our typography with the Public Sans font family. Strengthen your department’s brand and content with this strong, neutral typeface.</p>
-			</div>
+					<p>We’ve enhanced our typography with the Public Sans font family. Strengthen your department’s brand and content with this strong, neutral typeface.</p>
+
+				</div>
+			</a>
 		</div>
 	</div>
 	<div class="container">
