--- a/src/scss/colortheme/cs-link-grid.scss
+++ b/src/scss/colortheme/cs-link-grid.scss
@@ -11,3 +11,10 @@
   color: darken($color-p2, 7%);
  }
 }
+.bg-primary .link-grid {
+   border-color:$white;
+   &:hover,
+   &:focus {
+    background-color: darken($color-p2, 7%);
+   }
+}
