--- a/src/_includes/mobile-controls.njk
+++ b/src/_includes/mobile-controls.njk
@@ -4,17 +4,17 @@
     <!-- Add more mobile controls here. These will be on the right side of the mobile page header section -->
   </span>
   <div class="mobile-control-group main-nav-icons">
+    {#
     <button class="mobile-control toggle-search">
       <span class="ca-gov-icon-search hidden-print" aria-hidden="true"></span>
       <span class="sr-only">Search</span>
     </button>
+    #}
     <button
       id="nav-icon3"
       class="mobile-control toggle-menu"
       aria-expanded="false"
-      aria-controls="navigation"
-      data-bs-toggle="collapse"
-      data-bs-target="#navigation">
+      aria-controls="navigation">
       <span></span>
       <span></span>
       <span></span>
