--- a/src/scss/cagov/search.scss
+++ b/src/scss/cagov/search.scss
@@ -322,6 +322,7 @@ input[type="search"].search-textfield {
   @media (max-width: $screen-sm-max) {
     padding-right: 1rem;
     padding-left: 1rem;
+    max-height: 100%;
   }
 }
 
