--- a/src/scss/colortheme/delta-import.scss
+++ b/src/scss/colortheme/delta-import.scss
@@ -41,5 +41,6 @@
 @import "cs-blockquote.scss";
 @import "cs-executive-profile.scss";
 @import "cs-utility.scss";
+@import "cs-site-header.scss";
 
 @import "cs-high-contrast.scss"; // File should always be last
