--- a/src/_includes/layouts/search.njk
+++ b/src/_includes/layouts/search.njk
@@ -9,6 +9,7 @@
     <meta name="Author" content="State of California" />
     <meta name="Description" content="State of California" />
     <meta name="Keywords" content="California, government" />
+    <meta name="MobileOptimized" content="320" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
