--- a/src/scss/colortheme/delta.scss
+++ b/src/scss/colortheme/delta.scss
@@ -98,3 +98,6 @@ $text-field-color: rgba(255, 255, 255, 0.8); // 80% white
 
 // UTILITY
 $utility-link-hover-color: #fff9eb;
+
+// MOBILE DRAWER BACKGROUND
+$mobile-drawer: $color-p3;
