--- a/src/scss/colortheme/eureka.scss
+++ b/src/scss/colortheme/eureka.scss
@@ -94,3 +94,6 @@ $text-field-color: rgba(255, 255, 255, 0.8); // 80% white
 
 // UTILITY
 $utility-link-hover-color: lighten($color-p1, 35%);
+
+// MOBILE DRAWER BACKGROUND
+$mobile-drawer: $color-p3;
