--- a/src/scss/colortheme/delta.scss
+++ b/src/scss/colortheme/delta.scss
@@ -101,3 +101,4 @@ $utility-link-hover-color: #fff9eb;
 
 // MOBILE DRAWER BACKGROUND
 $mobile-drawer: $color-p3;
+$mobile-drawer-active: lighten($color-p3, 7%);
