--- a/src/scss/colortheme/santabarbara.scss
+++ b/src/scss/colortheme/santabarbara.scss
@@ -100,3 +100,4 @@ $utility-link-hover-color: lighten($color-p1, 35%);
 
 // MOBILE DRAWER BACKGROUND
 $mobile-drawer: $color-p3;
+$mobile-drawer-active: lighten($color-p3, 7%);
