--- a/src/scss/colortheme/cs-navigation.scss
+++ b/src/scss/colortheme/cs-navigation.scss
@@ -60,9 +60,27 @@ nav-item-search {
   &:focus {
     color: $gray-900;
   }
+  // 991
+  @media (max-width: $screen-sm-max) {
+    &.active {
+      background-color: $mobile-drawer-active !important;
+      color: $white !important;
+      &:hover,
+      &:focus {
+        background-color: $mobile-drawer !important;
+        color: $white !important;
+      }
+      &::before,
+      &::after {
+        border-left: none !important;
+      }
+    }
 
-  @media (max-width: $screen-xs-max) {
-    border-bottom: 1px solid $color-s1;
+    &:hover,
+    &:focus {
+      background-color: $mobile-drawer-active !important;
+      color: $white !important;
+    }
   }
 }
 
@@ -75,6 +93,17 @@ nav-item-search {
 
   [class^="ca-gov-icon-"] {
     color: $gray-700;
+  }
+  // 991px
+  @media (max-width: $screen-sm-max) {
+    background-color: $mobile-drawer;
+    &.active {
+      background-color: $mobile-drawer-active;
+      &:hover,
+      &:focus {
+        background-color: $mobile-drawer;
+      }
+    }
   }
 }
 
@@ -89,9 +118,9 @@ nav-item-search {
       background: #fff;
     }
 
-    @media (max-width: $screen-xs-max) {
-      border-right: none; // beta 5.0 addition (for accessible menu)
-      border-bottom: 1px solid $color-s1;
+    @media (max-width: $screen-sm-max) {
+      border: none; // beta 5.0 addition (for accessible menu)
+      border-top: 1px solid $gray-200;
 
       &:hover,
       &:focus {
@@ -148,10 +177,6 @@ nav-item-search {
       }
     }
   }
-
-  .media + .media {
-    //border-bottom-color:red;
-  }
 }
 
 // Accessible menu
@@ -185,4 +210,11 @@ nav-item-search {
 
 .has-sub .rotate {
   color: $color-p2;
+}
+
+/* Dark Mobile menu */
+@media (max-width: $screen-sm-max) {
+  .navigation-search {
+    background-color: $mobile-drawer;
+  }
 }
