--- a/src/scss/colortheme/oceanside.scss
+++ b/src/scss/colortheme/oceanside.scss
@@ -95,3 +95,4 @@ $utility-link-hover-color: lighten($color-p1, 35%);
 
 // MOBILE DRAWER BACKGROUND
 $mobile-drawer: darken($color-p2, 7%);
+$mobile-drawer-active: $color-p2;
