--- a/src/scss/colortheme/sacramento.scss
+++ b/src/scss/colortheme/sacramento.scss
@@ -97,3 +97,4 @@ $utility-link-hover-color: lighten($color-p1, 35%);
 
 // MOBILE DRAWER BACKGROUND
 $mobile-drawer: $color-p2;
+$mobile-drawer-active: lighten($color-p2, 7%);
